--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -2,6 +2,7 @@
 #root .nav {
   position: sticky;
   top: 0;
+  z-index: 1;
   display: flex;
   background-color: #222831;
 }
@@ -28,6 +29,17 @@
   font-size: larger;
   font-weight: 600;
   color: #00ADB5;
+}
+#root .pdf-wrap {
+  display: inline-flex;
+  flex-flow: column wrap;
+  width: 100%;
+  align-items: center;
+}
+#root .pdf-wrap .pdf-item {
+  display: inline-block;
+  text-align: center;
+  border: 1px black solid;
 }
 
 /*# sourceMappingURL=index.css.map */
