--- a/src/style/scss/index.scss
+++ b/src/style/scss/index.scss
@@ -10,6 +10,7 @@ $white: #EEEEEE;
   .nav {
     position: sticky;
     top: 0;
+    z-index: 1;
     display: flex;
     background-color: $black;
 
@@ -46,6 +47,29 @@ $white: #EEEEEE;
           color: $mint;
         }
       }
+    }
   }
+
+  .pdf-wrap {
+    display: inline-flex;
+    flex-flow: column wrap;
+    width: 100%;
+    align-items: center;
+    
+    .pdf-item {
+      display: inline-block;
+      text-align: center;
+      border: 1px black solid;
+      
+      .react-pdf__Document {
+
+        .react-pdf__Page {
+          
+          .react-pdf__Page__canvas {
+            
+          }
+        }
+      }
+    }
   }
 }
