--- a/src/style/scss/index.scss
+++ b/src/style/scss/index.scss
@@ -76,4 +76,12 @@ $white: #EEEEEE;
       padding: 10px;
     }
   }
+
+  .img-wrap {
+    
+    img {
+      width: 150px;
+      padding: 10px;
+    }
+  }
 }
