--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -4,6 +4,7 @@
   top: 0;
   z-index: 1;
   display: flex;
+  flex-flow: row nowrap;
   background-color: #222831;
 }
 #root .nav a {
@@ -33,8 +34,8 @@
 #root .pdf-wrap {
   display: inline-flex;
   flex-flow: column wrap;
-  width: 100%;
   align-items: center;
+  width: 100%;
 }
 #root .pdf-wrap .pdf-item {
   display: inline-block;
@@ -47,6 +48,7 @@
 #root .skill-wrap {
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
   width: 100%;
 }
 #root .skill-wrap .skill-item {
