--- a/src/style/scss/index.scss
+++ b/src/style/scss/index.scss
@@ -12,6 +12,7 @@ $white: #EEEEEE;
     top: 0;
     z-index: 1;
     display: flex;
+    flex-flow: row nowrap;
     background-color: $black;
 
     a {
@@ -53,8 +54,8 @@ $white: #EEEEEE;
   .pdf-wrap {
     display: inline-flex;
     flex-flow: column wrap;
-    width: 100%;
     align-items: center;
+    width: 100%;
     
     .pdf-item {
       display: inline-block;
@@ -66,7 +67,13 @@ $white: #EEEEEE;
         .react-pdf__Page {
           
           .react-pdf__Page__canvas {
-            
+            // width: 354px !important;
+            // height: 200px !important;
+          }
+
+          .react-pdf__Page__textContent {
+            // width: 354px !important;
+            // height: 200px !important;
           }
         }
       }
@@ -80,6 +87,7 @@ $white: #EEEEEE;
   .skill-wrap {
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
     width: 100%;
 
     .skill-item {
