--- a/src/style/scss/index.scss
+++ b/src/style/scss/index.scss
@@ -1,5 +1,8 @@
 @import "../reset.css";
 
+$mobile-size: 335px;
+$tablet-size: 758px;
+$desktop-size: 1024;
 $black: #222831;
 $light-black: #393E46;
 $mint: #00ADB5;
@@ -66,15 +69,6 @@ $white: #EEEEEE;
 
         .react-pdf__Page {
           
-          .react-pdf__Page__canvas {
-            // width: 354px !important;
-            // height: 200px !important;
-          }
-
-          .react-pdf__Page__textContent {
-            // width: 354px !important;
-            // height: 200px !important;
-          }
         }
       }
     }
