--- a/src/style/scss/index.scss
+++ b/src/style/scss/index.scss
@@ -16,7 +16,14 @@ $white: #EEEEEE;
     z-index: 1;
     display: flex;
     flex-flow: row nowrap;
+    overflow: auto;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
     background-color: $black;
+
+    &::-webkit-scrollbar {
+      display: none; /* for Chrome, Safari, and Opera */
+  }
 
     a {
       padding: 30px 20px;
