--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -1,5 +1,5 @@
 @import "../reset.css";
-#root .nav {
+.nav {
   position: sticky;
   top: 0;
   z-index: 1;
@@ -12,27 +12,27 @@
   /* for Firefox */
   background-color: #222831;
 }
-#root .nav::-webkit-scrollbar {
+.nav::-webkit-scrollbar {
   display: none;
   /* for Chrome, Safari, and Opera */
 }
-#root .nav a {
+.nav a {
   padding: 30px 20px;
   background-color: #222831;
 }
-#root .nav a:first-child:hover {
+.nav a:first-child:hover {
   background-color: #222831;
 }
-#root .nav a:hover {
+.nav a:hover {
   background-color: #393E46;
 }
-#root .nav a:active {
+.nav a:active {
   opacity: 0.5;
 }
-#root .nav a li img {
+.nav a li img {
   height: 30px;
 }
-#root .nav a li p {
+.nav a li p {
   display: flex;
   align-items: center;
   height: 30px;
@@ -40,40 +40,61 @@
   font-weight: 600;
   color: #00ADB5;
 }
-#root .pdf-wrap {
+
+.pdf-wrap {
   display: inline-flex;
   flex-flow: column wrap;
   align-items: center;
   width: 100%;
 }
-#root .pdf-wrap .pdf-item {
+.pdf-wrap .pdf-item {
   display: inline-block;
   text-align: center;
   margin: 40px 0;
 }
-#root .pdf-wrap .pdf-item-controller {
+.pdf-wrap .pdf-item-controller {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
   padding: 10px;
 }
-#root .skill-wrap {
+.pdf-wrap .pdf-item-controller .arrow {
+  align-self: center;
+  color: #aaa;
+  opacity: 0.3;
+}
+.pdf-wrap .pdf-item-controller .arrow:hover {
+  opacity: 0.5;
+}
+.pdf-wrap .pdf-item-controller .arrow:active {
+  opacity: 0.9;
+}
+.pdf-wrap .pdf-item-controller .page-count {
+  align-self: center;
+  padding: 0 10px;
+  font-size: 1.5rem;
+}
+
+.skill-wrap {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
   width: 100%;
 }
-#root .skill-wrap .skill-item {
+.skill-wrap .skill-item {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
   width: 300px;
   margin: 10px;
 }
-#root .skill-wrap .skill-item img {
+.skill-wrap .skill-item img {
   width: 150px;
 }
-#root .skill-wrap .skill-item p {
+.skill-wrap .skill-item p {
   padding: 5px 0 0;
 }
-#root .skill-wrap .skill-item ul li {
+.skill-wrap .skill-item ul li {
   padding: 5px 0 0;
 }
 
