--- a/src/style/scss/index.scss
+++ b/src/style/scss/index.scss
@@ -1,125 +1,2 @@
 @import "../reset.css";
-
-$mobile-size: 335px;
-$tablet-size: 758px;
-$desktop-size: 1024;
-$black: #222831;
-$light-black: #393E46;
-$mint: #00ADB5;
-$white: #EEEEEE;
-
-#root {
-
-  .nav {
-    position: sticky;
-    top: 0;
-    z-index: 1;
-    display: flex;
-    flex-flow: row nowrap;
-    overflow: auto;
-    -ms-overflow-style: none; /* for Internet Explorer, Edge */
-    scrollbar-width: none; /* for Firefox */
-    background-color: $black;
-
-    &::-webkit-scrollbar {
-      display: none; /* for Chrome, Safari, and Opera */
-  }
-
-    a {
-      padding: 30px 20px;
-      background-color: $black;
-      
-      &:first-child {
-        &:hover {
-          background-color: $black;
-        }
-      }
-
-      &:hover {
-        background-color: $light-black;
-      }
-
-      &:active {
-        opacity: 0.5;
-      }
-      
-      li {
-
-        img {
-          height: 30px;
-        }
-
-        p {
-          display: flex;
-          align-items: center;
-          height: 30px;
-          font-size: larger;
-          font-weight: 600;
-          color: $mint;
-        }
-      }
-    }
-  }
-
-  .pdf-wrap {
-    display: inline-flex;
-    flex-flow: column wrap;
-    align-items: center;
-    width: 100%;
-    
-    .pdf-item {
-      display: inline-block;
-      text-align: center;
-      margin: 40px 0;
-      
-      .react-pdf__Document {
-
-        .react-pdf__Page {
-          
-        }
-      }
-    }
-
-    .pdf-item-controller {
-      padding: 10px;
-    }
-  }
-
-  .skill-wrap {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    width: 100%;
-
-    .skill-item {
-      display: flex;
-      flex-flow: column wrap;
-      align-items: center;
-      width: 300px;
-      margin: 10px;
-
-      img {
-        width: 150px;
-      }
-
-      p {
-        padding: 5px 0 0;
-      }
-
-      .skill-name {
-        
-      }
-
-      .skill-rate {
-        
-      }
-
-      ul {
-        
-        li {
-          padding: 5px 0 0;
-        }
-      }
-    }
-  }
-}
+@import "./_constant", "./_nav", "./_pdf", "./skills";
