--- a/src/style/scss/_skills.scss
+++ b/src/style/scss/_skills.scss
@@ -1,3 +1,11 @@
+@mixin textStyle {
+  font: {
+    size: 18px;
+    color: #ddd;
+    weight: 500;
+  }
+}
+
 .skill-wrap {
   display: flex;
   flex-flow: row wrap;
@@ -13,24 +21,19 @@
 
     img {
       width: 150px;
+      padding: 10px;
     }
 
     p {
       padding: 5px 0 0;
+      @include textStyle
     }
-
-    // .skill-name {
-      
-    // }
-
-    // .skill-rate {
-      
-    // }
 
     ul {
       
       li {
         padding: 5px 0 0;
+        @include textStyle
       }
     }
   }
