career page 생성중

--- a/src/style/scss/index.scss
+++ b/src/style/scss/index.scss
@@ -1,2 +1,2 @@
 @import "../reset.css";
-@import "./_constant", "./_nav", "./_pdf", "./skills";
+@import "./_constant", "./_nav", "./_pdf", "./skills", "./career";
