--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -105,4 +105,65 @@
   font-weight: 500;
 }
 
+.career-wrap {
+  display: flex;
+  flex-flow: column wrap;
+  align-content: center;
+  width: 100%;
+  padding-top: 30px;
+}
+.career-wrap .career-total {
+  padding: 10px 10px 10px 20px;
+  font-size: 16px;
+  font-weight: 400;
+}
+.career-wrap .career-item {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 400px;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: #f8f8f8;
+}
+.career-wrap .career-item .career-title {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 0 20px;
+}
+.career-wrap .career-item .career-title div:first-child {
+  font-size: 20px;
+  font-weight: 700;
+}
+.career-wrap .career-item .career-title div:last-child {
+  font-size: 14px;
+  color: #888;
+}
+.career-wrap .career-item .career-content {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+.career-wrap .career-item .career-content div:first-child {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 20px;
+  padding: 5px;
+  border-radius: 15px;
+  background-color: #efefef;
+  font-size: 16px;
+  font-weight: 500;
+}
+.career-wrap .career-item .career-content div:last-child {
+  width: 100%;
+  padding: 5px 0 5px 5px;
+  margin-left: 10px;
+  font-size: 18px;
+  font-weight: 500;
+}
+
 /*# sourceMappingURL=index.css.map */
