max-width에 중앙정렬

--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -189,4 +189,22 @@
   }
 }
 
+#root {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 100%;
+}
+#root .wrap {
+  align-self: center;
+  max-width: 1080px;
+}
+#root .home-wrap {
+  display: flex;
+  flex-flow: column nowrap;
+}
+#root .home-wrap .wrap {
+  align-self: center;
+  max-width: 1080px;
+}
+
 /*# sourceMappingURL=index.css.map */
