--- a/src/style/css/index.css
+++ b/src/style/css/index.css
@@ -146,7 +146,7 @@
 }
 .career-wrap .career-item .career-content-task {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: column nowrap;
   justify-content: space-between;
   margin-bottom: 10px;
 }
@@ -164,14 +164,14 @@
 }
 .career-wrap .career-item .career-content-task div:last-child {
   width: 100%;
-  padding: 5px 0 5px 5px;
-  margin-left: 10px;
+  padding: 10px 0;
+  padding-left: 10px;
   font-size: 18px;
   font-weight: 500;
 }
 .career-wrap .career-item .career-content-projects {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: column nowrap;
   justify-content: space-between;
   margin-bottom: 10px;
 }
@@ -189,8 +189,7 @@
 }
 .career-wrap .career-item .career-content-projects-content {
   width: 100%;
-  padding: 5px 0 5px 5px;
-  margin-left: 10px;
+  padding: 10px 0;
 }
 .career-wrap .career-item .career-content-projects-content .project-wrap {
   margin: 10px 0;
