--- a/src/style/scss/_career.scss
+++ b/src/style/scss/_career.scss
@@ -50,15 +50,14 @@
     .career-content {
       @mixin careerContentWrap {
         display: flex;
-        flex-flow: row nowrap;
+        flex-flow: column nowrap;
         justify-content: space-between;
         margin-bottom: 10px;
       }
 
       @mixin secondContentWrap {
         width: 100%;
-        padding: 5px 0 5px 5px;
-        margin-left: 10px;
+        padding: 10px 0;
       }
 
       &-task {
@@ -83,6 +82,7 @@
   
           &:last-child {
             @include secondContentWrap;
+            padding-left: 10px;
             font: {
               size: 18px;
               weight: 500;
