--- a/src/style/scss/_career.scss
+++ b/src/style/scss/_career.scss
@@ -6,7 +6,8 @@
   padding-top: 30px;
 
   .career-total {
-    padding: 10px 10px 10px 20px;
+    text-align: right;
+    padding: 10px 20px 10px 10px;
     font: {
       size: 16px;
       weight: 400;
@@ -120,6 +121,14 @@
 
             &:first-child {
               margin: 0;
+            }
+
+            p{
+              padding: 2.5px 0;
+            }
+
+            ul {
+              padding: 2.5px 0;
             }
           }
         }
